# amd-routing-agent

./: .dockerignore  .env.example  .gitignore  ACCEPTANCE.md  ARCHITECTURE.md  ASSUMPTIONS.md  DEPLOYMENT.md  Dockerfile  Dockerfile.spaces  PLAN.md  POSTMORTEM.md  README.md  SECURITY.md  SKILL-UPDATES.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: runbook.md
docs/adr/: 0001-tiered-cascade-over-single-model.md  0002-adapter-isolation-for-unknown-harness-contract.md  0003-reasoning-suppression-as-registry-metadata.md  0004-honest-baseline-for-sc2.md
evals/: README.md  env_loader.py  graders.py  run_eval.py
evals/evalset/: arithmetic.jsonl  classification.jsonl  code.jsonl  dates.jsonl  extraction.jsonl  multiple_choice.jsonl  short_qa.jsonl  strings.jsonl  summarization.jsonl  units.jsonl
evals/policies/: default.yaml  tuned.yaml
evals/reports/: default-baseline.json  default-dry-run.json  default-live.json  tuned-baseline.json  tuned-dry-run.json  tuned-live.json
launch/: DECK.md  DEMO-SCRIPT.md  SOCIAL.md  SUBMISSION.md
launch/video/: demo.srt
scripts/: deploy_space.sh
scripts/assets/: cover.html  deck.html  render.mjs
scripts/video/: assemble.sh  assemble_pipeline.py  narration.py  package-lock.json  package.json  record_demo.mjs  render_captions.mjs
spaces/: README.md
tests/: test_adapter.py  test_classifier.py  test_client.py  test_config.py  test_models.py  test_registry.py  test_solver_arithmetic.py  test_solver_dates.py  test_solver_extraction.py  test_solver_strings.py  test_solver_units.py  test_webapp.py
(+21 files in other folders)
