[project]
name = "routing-agent"
version = "0.1.0"
description = "Hybrid token-efficient routing agent for the AMD Hackathon ACT II Track 1"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.40",
    "pydantic>=2",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-dateutil>=2.9",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/routing_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
